--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                     <h3>Student & Problem Solver</h3>
                     <p>
                         I'm currently pursuing my B.Tech in Electrical Engineering (Power and Automation) at IIT Delhi, 
-                        graduating in 2028. With a CGPA of 9.189/10 and department rank of 5, I'm passionate about 
-                        applying theoretical knowledge to solve real-world problems.
+                        graduating in 2028.I'm passionate about applying theoretical knowledge to solve real-world problems.
                     </p>
                     <p>
                         My journey includes achievements in competitive programming, with a perfect score at USACO Silver 
@@ -115,15 +114,7 @@
                             <span class="status status--info">Department Rank: 5</span>
                         </div>
                     </div>
-                    <div class="education-item">
-                        <h4>M.M. Public School</h4>
-                        <p class="degree">CBSE Class XII</p>
-                        <p class="duration">2022-2024</p>
-                        <span class="status status--success">92.6%</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    
     </section>
 
     <!-- Skills Section -->
@@ -290,18 +281,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3>Department Change Achievement</h3>
-                        <p class="timeline-role">Based on Academic Merit</p>
-                        <p class="timeline-description">
-                            Successfully transitioned to Electrical Engineering based on exceptional CGPA and academic performance.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+                
     </section>
 
     <!-- Contact Section -->
