--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Naman Goyal - Electrical Engineering Student at IIT Delhi. Portfolio showcasing projects in Machine Learning, Data Structures, and Backend Development.">
-    <meta name="keywords" content="Naman Goyal, IIT Delhi, Electrical Engineering, Machine Learning, Portfolio, Python, C++">
+    <meta name="keywords" content="Naman Goyal, IIT Delhi, Electrical Engineering, Machine Learning, Portfolio, Python, Quantum Computing, C++">
     <meta name="author" content="Naman Goyal">
     <title>Naman Goyal - Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -47,7 +47,7 @@
                     </h1>
                     <p class="hero-subtitle">Electrical Engineering Student at IIT Delhi</p>
                     <p class="hero-description">
-                        Passionate about Machine Learning, Data Structures, and creating innovative solutions. 
+                        Passionate about Quantum Computing, Machine Learning, Data Structures, and creating innovative solutions. 
                         Currently pursuing B.Tech in Electrical Engineering with a focus on Power and Automation.
                     </p>
                     <div class="hero-buttons">
